--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -24,7 +24,7 @@
         e.preventDefault()
         let user_name = $('input.username').val()
         let user_input =$('input.message').val()
-        socket.emit('join', {
+        socket.emit('my event', {
         //socket.emit('my event', {
             user_name : user_name,
             message : user_input
