--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -10,35 +10,39 @@
 
     </form>
     <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js" integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I=" crossorigin="anonymous"></script>
-    <script type="text/javascript">
-        console.log(document.domain)
+    <script type="text/javascript" charset="utf-8">
+        //console.log(document.domain)
         //var socket = io();
-        var socket = io.connect('http://' + document.domain + ':' + location.port);
+        //var socket = io.connect('http://' + document.domain + ':' + location.port);
 
-        socket.on('connect', function() {
-        socket.emit('my event', {
-        data: 'User Connected'
-        })
-
-        var form = $('form').on('submit', function(e) {
-        e.preventDefault()
-        let user_name = $('input.username').val()
-        let user_input =$('input.message').val()
-        socket.emit('my event', {
+        //socket.on('connect', function() {
         //socket.emit('my event', {
-            user_name : user_name,
-            message : user_input
-            })
-            $('input.message').val( '' ).focus()
-            })
-         })
-         socket.on('my response', function(msg) {
-         console.log(msg)
-         if(typeof msg.user_name !== 'undefined') {
-         $( 'h3' ).remove()
-         $( 'div.message_holder').append( '<div><b style="color: #000">'+msg.user_name+ ': </b>'+msg.message+'</div>' )
-         }
-         })
+        //data: 'User Connected'
+        //})
+
+        //var form = $('form').on('submit', function(e) {
+        //e.preventDefault()
+        //let user_name = $('input.username').val()
+        //let user_input =$('input.message').val()
+        //socket.emit('my event', {
+        //socket.emit('my event', {
+         //   user_name : user_name,
+         //   message : user_input
+         //   })
+         //   $('input.message').val( '' ).focus()
+         //   })
+         //})
+         //socket.on('my response', function(msg) {
+         //console.log(msg)
+         //if(typeof msg.user_name !== 'undefined') {
+         //$( 'h3' ).remove()
+         //$( 'div.message_holder').append( '<div><b style="color: #000">'+msg.user_name+ ': </b>'+msg.message+'</div>' )
+         //}
+         //})
+         var socket = io();
+         socket.on('connect', function() {
+            socket.emit('my event', {data: 'I\'m connected!'});
+            });
     </script>
 
 
