changed uwsgi in procfile

--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -27,7 +27,7 @@
         });
         function createDraft() {
             console.log('Creating draft...');
-            socket.emit('create', {room: 'some_crap'});
+            socket.emit('create', {room: room});
             }
         //var form = $('form').on('submit', function(e) {
         //e.preventDefault()
