--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -3,10 +3,10 @@
     <h3 style='color: #ccc;font-size: 30px;'>No message yet</h3>
     <div  class="message_holder"></div>
 
-    <form action="" method="GET">
+    <form action="" method="GET" id="load">
         <input type="text" class="username" placeholder="User Name"/>
         <input type="text" class="message" placeholder="Messages"/>
-        <input type="submit"/>
+        <input type="Submit"/>
 
     </form>
     <button onclick="createDraft()">Create Draft</button>
@@ -19,8 +19,10 @@
 
         socket.on('connect', function() {
             console.log('Websocket connected!');
-            socket.emit('my event', {data: 'im connected'})
-        })
+            socket.emit('my event', {
+            data: 'im connected'
+            })
+        //})
         //socket.emit('my event', {
         //data: 'User Connected'
         //});
@@ -31,24 +33,25 @@
             console.log('Creating draft...');
             socket.emit('create', {room: 'mb_boys', email: 'bhuff2000'})
             }
-        //var form = $('form').on('submit', function(e) {
-        //    e.preventDefault()
-        //    let user_name = $('input.username').val()
-        //    let user_input =$('input.message').val()
-        //        socket.emit('my event', {
-        //            user_name : user_name,
-        //            message : user_input
-        //            })
-        //    $('input.message').val( '' ).focus()
-        //    })
-         //})
-         //socket.on('my response', function(msg) {
-         //   console.log(msg)
-         //   if(typeof msg.user_name !== 'undefined') {
-         //   $( 'h3' ).remove()
-         //   $( 'div.message_holder').append( '<div><b style="color: #000">'+msg.user_name+ ': </b>'+msg.message+'</div>' )
-         //}
-         //})
+        var form = $('#load').on('submit', function() {
+
+            let user_name = $('input.username').val()
+            let user_input =$('input.message').val()
+
+                socket.emit('load data', {
+                    'user_name' : user_name,
+                    'message' : user_input
+                    })
+            $('input.message').val( '' ).focus()
+            })
+         })
+         socket.on('loaded', function(msg) {
+            console.log(msg)
+            if(typeof msg.user !== 'undefined') {
+            $( 'h3' ).remove()
+            $( 'div.message_holder').append( '<div><b style="color: #000">'+msg.user+ ': </b>'+msg.message+'</div>' )
+         }
+         })
          //var socket = io();
          //socket.on('connect', function() {
          //   socket.emit('my event', {data: 'I\'m connected!'});
