--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -16,7 +16,7 @@
     var socket =io();
     socket.on('connect', function() {
         console.log('this is javascript connect script')
-        //socket.emit('message', 'this is javascript send to message);
+        socket.emit('message', 'this is javascript send to message);
         });
 
     socket.on('response', function(msg) {
