--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -21,6 +21,7 @@
 
     socket.on('response', function(msg) {
         console.log('this is the javascript response script ' +msg)
+        $( 'div.message_holder').append( '<div><b style="color: #000">Room:  ': </b>'+msg.room+'</div>' )
         });
     </script>
 
