--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -13,7 +13,7 @@
 
     <script type="text/javascript" charset="utf-8">
 
-    var socket =socket.io();
+    var socket =io();
     socket.on('connect', function() {
         console.log('this is javascript connect script')
         socket.emit('message', 'this is javascript send to message');
