--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -17,7 +17,7 @@
     var socket =io.connect('http://' +document.domain + ':' + location.port, {transports: ['websocket']});
     socket.on('connect', function() {
         console.log('this is javascript connect script')
-        socket.emit('message', 'this is javascript send to message');
+        socket.emit('first_comm', 'this is javascript send to message');
         });
 
     socket.on('response', function(msg) {
@@ -28,13 +28,14 @@
     $('#load').on('submit', function() {
         let user_name = $('input.username').val();
         let user_input =$('input.message').val();
-            socket.emit('my event', {
+            socket.emit('chatter', {
                     'username' : user_name,
                     'message' : user_input
                     })
     });
 
     socket.on('chat_resp', function(msg) {
+        $( 'h3' ).remove();
         $( 'div.message_holder').append( '<div><b style="color: #000">' +msg.username + ' : </b>'+msg.message+'</div>' )
         });
 
