websockets chat code added

--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -28,7 +28,7 @@
             let name = $('#myname').val();
             let message = $('myMessage').val();
             stuff={'name': name, 'message': message};
-            socket.send($(stuff);
+            socket.send(stuff);
             $('myMessage').val('');
         });  //end click
 
