--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -19,8 +19,7 @@
         });  //end connect
 
         socket.on('message', function(msg) {
-            $('#messages').append('<li><input type="text" id="myname" value=' + msg.name +
-            '<input type="text" id="mymessage" value=' + msg.message + '></li>;
+            $('#messages').append('<li>'+ msg.name + ': ' + msg.message +'</li>';
             console.log('message received')
         });  //end message
 
