--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -18,7 +18,7 @@
             socket.send('user has connected!');
         });  //end connect
 
-        socket.on('message', function(msg) {
+        socket.on('my event', function(msg) {
             $('#messages').append('<li>'+ msg.name + ': ' + msg.message +'</li>');
             console.log('message received')
         });  //end message
@@ -27,7 +27,7 @@
             let name = $('#myname').val();
             let message = $('myMessage').val();
             json={'name': name, 'message': message};
-            socket.send(json);
+            socket.send('my event' json);
             $('myMessage').val('');
         });  //end click
 
