websockets chat code added

--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -27,7 +27,7 @@
             let name = $('#myname').val();
             let message = $('myMessage').val();
             json={'name': name, 'message': message};
-            socket.send('my event' json);
+            socket.send('my event', json);
             $('myMessage').val('');
         });  //end click
 
