--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -24,7 +24,7 @@
         });  //end message
 
         $('#sendbutton').on('click', function() {
-            socket.send($('myMessage').val();
+            socket.send($('#myMessage').val();
             $('myMessage').val('');
         });  //end click
 
