--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -6,7 +6,6 @@
 
 
     <ul id="messages"></ul>
-        <input type="text" id="myname" placeholder="name"/>
         <input type="text" id="myMessage" placeholder="Messages"/>
         <button id="sendbutton">Send</button>
     <script type="text/javascript" charset="utf-8">
@@ -24,7 +23,7 @@
         });  //end message
 
         $('#sendbutton').on('click', function() {
-            socket.send($('#myMessage').val();
+            socket.send($('#myMessage').val());
             $('myMessage').val('');
         });  //end click
 
