websockets chat code added

--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -16,7 +16,7 @@
         var socket =io.connect('http://' +document.domain + ':' + location.port, {transports: ['websocket']});
 
         socket.on('connect', function() {
-            socket.send($('#myName).val() + ' user has connected!');
+            socket.send($('#myName).val()) + ' user has connected!');
         });  //end connect
 
         socket.on('message', function(msg) {
