--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -25,7 +25,7 @@
         });  //end message
 
         $('#sendbutton').on('click', function() {
-            socket.send($('#myMessage').val());
+            socket.send($('#myName').val());
             $('myMessage').val('');
         });  //end click
 
