--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -16,7 +16,7 @@
         var socket =io.connect('http://' +document.domain + ':' + location.port, {transports: ['websocket']});
 
         socket.on('connect', function() {
-            socket.send('message', $('#myName').val() + ' user has connected!');
+            socket.send(message, $('#myName').val() + ' user has connected!');
         });  //end connect
 
         socket.on('json', function(msg) {
