--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -9,12 +9,59 @@
         <b><input type="text" id="myName" placeholder="Name" value="{{  email  }}"/></b>
         <input type="text" id="myMessage" placeholder="Messages"/>
         <button id="sendbutton">Send</button>
+
+    <input type="text" id="message">
+    <button id="send">Send</button>
+
+    <input type="text" id="username">
+    <button id="send_username">Send Username</button>
+
+    <br>
+    <br>
+    <br>
+
+    Send To:  <input type="text" id="send_to_username">
+    Messager:  <input type="text id=private_message">
+    <button id="send_private_message">Send</button>
+
     <script type="text/javascript" charset="utf-8">
     $(document).ready(function() {
 
-
         var socket =io.connect('http://' +document.domain + ':' + location.port, {transports: ['websocket']});
 
+        var socket_messages = io('http://' +document.domain + ':' + location.port +'/draft')
+
+        $('#send').on('click', function() {
+            var message =$('#message').val();
+            socket_messages.emit('message from user', message);
+        });
+
+        socket_messages.on('from flask', function(msg) {
+            alert(msg);
+        });
+
+        socket.on('server originated', function(msg) {
+            alert(msg);
+        });
+
+        var private_socket = io('http://' +document.domain + ':' + location.port +'/draft')
+
+        $('#send_username').on('click', function() {
+            private_socket.emit('usernane', $('#username').val());
+        });
+
+        $('#send_private_message').on('click', function() {
+            var=recipient = $('#send_to_username').val();
+            var message_to_load = $('#private_message').val();
+
+            private_socket.emit('private_message', {'username' : recipient, 'message' :  message_to_send});
+
+        });
+
+        private_socket.on('new_private_message', function(msg)  {
+        alert(msg);
+
+        });
         socket.on('connect', function() {
             socket.send($('#myName').val() + ' user has connected!');
         });  //end connect
