--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -51,7 +51,7 @@
         });
 
         $('#send_private_message').on('click', function() {
-            var=recipient = $('#send_to_username').val();
+            var recipient = $('#send_to_username').val();
             var message_to_load = $('#private_message').val();
 
             private_socket.emit('private_message', {'username' : recipient, 'message' :  message_to_send});
