--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -21,7 +21,7 @@
     <br>
 
     Send To:  <input type="text" id="send_to_username">
-    Messager:  <input type="text id=private_message">
+    Messager:  <input type="text" id="private_message">
     <button id="send_private_message">Send</button>
 
     <script type="text/javascript" charset="utf-8">
