--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -47,7 +47,7 @@
         var private_socket = io('http://' +document.domain + ':' + location.port +'/draft', {transports: ['websocket']})
 
         $('#send_username').on('click', function() {
-            private_socket.emit('usernane', $('#username').val());
+            private_socket.emit('username', $('#username').val());
         });
 
         $('#send_private_message').on('click', function() {
