websockets with char and room

--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -29,22 +29,22 @@
 
         var socket =io.connect('http://' +document.domain + ':' + location.port, {transports: ['websocket']});
 
-        var socket_messages = io('http://' +document.domain + ':' + location.port +'/draft', {transports: ['websocket']})
+        var private_socket = io('http://' +document.domain + ':' + location.port +'/draft', {transports: ['websocket']})
 
         $('#send').on('click', function() {
             var message= $('#message').val();
             socket_messages.emit('message from user', message);
         });
 
-        socket_messages.on('from flask', function(msg) {
+        private_socket.on('from_flask', function(msg) {
             alert(msg);
         });
 
-        socket.on('server originated', function(msg) {
+        private_socket.on('server originated', function(msg) {
             alert(msg);
         });
 
-        var private_socket = io('http://' +document.domain + ':' + location.port +'/draft', {transports: ['websocket']});
+        //var private_socket = io('http://' +document.domain + ':' + location.port +'/draft', {transports: ['websocket']});
 
         $('#send_username').on('click', function() {
             private_socket.emit('username', $('#username').val());
