websockets with char and room

--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -27,7 +27,7 @@
     <script type="text/javascript" charset="utf-8">
     $(document).ready(function() {
 
-        var socket =io.connect('http://' +document.domain + ':' + location.port, {transports: ['websocket']});
+        var socket =io.connect('http://' +document.domain + ':' + location.port + '/draft', {transports: ['websocket']});
 
         var private_socket = io('http://' +document.domain + ':' + location.port +'/draft', {transports: ['websocket']})
 
