--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -33,33 +33,39 @@
 
         $('#send').on('click', function() {
             var message= $('#message').val();
+            console.log(message);
             socket_messages.emit('message from user', message);
         });
 
         private_socket.on('from flask', function(msg) {
-
+            console.log(msg);
             alert(msg);
         });
 
         socket.on('server originated', function(msg) {
+            console.log(msg);
             alert(msg);
         });
 
         //var private_socket = io('http://' +document.domain + ':' + location.port +'/draft', {transports: ['websocket']});
 
         $('#send_username').on('click', function() {
+            console.log($('#username').val());
             private_socket.emit('username', $('#username').val());
         });
 
         $('#send_private_message').on('click', function() {
             var recipient = $('#send_to_username').val();
+            console.log(recipient);
             var message_to_send = $('#private_message').val();
+            console.log(message_to_send);
 
             private_socket.emit('private_message', {'username' : recipient, 'message' :  message_to_send});
 
         });
 
         private_socket.on('new_private_message', function(msg)  {
+        console.log(msg);
         alert(msg);
 
         });
