websockets with char and room

--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -4,11 +4,13 @@
     <div  class="room_holder"></div>
     <div  class="message_holder"></div>
 
-
-    <ul id="messages"></ul>
-        <b><input type="text" id="myName" placeholder="Name" value="{{  email  }}"/></b>
-        <input type="text" id="myMessage" placeholder="Messages"/>
-        <button id="sendbutton">Send</button>
+    <div class="container" id="room_activity">
+        <h3 style='color: #ccc;font-size: 30px;'>Room Activity</h3>
+        <ul id="messages"></ul>
+            <b><input type="text" id="myName" placeholder="Name" value="{{  email  }}"/></b>
+            <input type="text" id="myMessage" placeholder="Messages"/>
+            <button id="sendbutton">Send</button>
+    </div>
 
     <input type="text" id="message">
     <button id="send">Send</button>
