--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -7,14 +7,17 @@
     <div class="container" id="room_activity">
         <h3 style='color: #ccc;font-size: 30px;'>Room Activity</h3>
         <ul id="messages"></ul>
-            <b><input type="text" id="myName" placeholder="Name" value="{{  email  }}"/></b>
-            <input type="text" id="myMessage" placeholder="Messages"/>
-            <button id="sendbutton">Send</button>
     </div>
+
+    <div class="container" id="room_creator">
+        <b><input type="text" id="roomName" placeholder="RoomName" /></b>
+        <button id="sendbutton">Create</button>
+    </div>
+
 
     <input type="text" id="message">
     <button id="send">Send</button>
-
+    <input type="text" id="myMessage" placeholder="Messages"/>
     <input type="text" id="username">
     <button id="send_username">Send Username</button>
 
