websockets with char and room

--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -2,16 +2,16 @@
 {% block content %}
     <br>
     <br>
-    <div class="container" id="room_creator">
+    <span><div class="container" id="room_creator">
         <b><input type="text" id="roomName" placeholder="RoomName" /></b>
         <button id="sendbutton">Create</button>
     </div>
-    
+
     <div class="container" id="room_activity">
         <h3 style='color: #ccc;font-size: 15px;'>Room Activity</h3>
         <ul id="messages"></ul>
     </div>
-
+    </span>
 
 
 
