--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -37,7 +37,7 @@
 
         $('#sendbutton').on('click', function() {
             console.log($('#roomName').val());
-            socketio.emit('new draft', {'draft_name' : $('#roomName').val()});
+            socket.emit('new draft', {'draft_name' : $('#roomName').val()});
 
         });
 
